Upravena chybová hláška.

--- a/public/500.html
+++ b/public/500.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <meta charset="utf-8">
+  <title>Něco se porouchalo. (500)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 50%;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -17,9 +18,14 @@
 </head>
 
 <body>
+  <img src="images/vzs_neco_se_porouchlo.png" style="padding-top:50px"></img>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Pomóóóc, něco se porouchalo!</h1>
+    Nepanikařte, nic není ztraceno. Chybička se prostě vloudila. <br /> <br />
+
+    Možná se snažíte se přistoupit na část stránek, pro které nemáte opravnění.
+    Třeba pomůže se přihlásit a zkusit to znova, ale kdo ví?
   </div>
 </body>
 </html>
