Moznost odhlasit cizi lidi z hartvalu pro predstavenstvo.

--- a/public/500.html
+++ b/public/500.html
@@ -22,10 +22,14 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>Pomóóóc, něco se porouchalo!</h1>
-    Nepanikařte, nic není ztraceno. Chybička se prostě vloudila. <br /> <br />
+    <p>
+    Nepanikařte, nic není ztraceno. Chybička se prostě vloudila.
+    </p>
 
+    <p>
     Možná se snažíte se přistoupit na část stránek, pro které nemáte opravnění.
     Třeba pomůže se přihlásit a zkusit to znova, ale kdo ví?
+    </p>
   </div>
 </body>
 </html>
