stranka nenalezena cesky

--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <meta charset="utf-8">
+  <title>Stránka nenalezena (404)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 50%;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -18,9 +19,10 @@
 
 <body>
   <!-- This file lives in public/404.html -->
+  <img src="images/vzs_neco_se_porouchlo.png" style="padding-top:50px"></img>
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Hledaná stránka nenalezena</h1>
+    <p>Možná jste špatně vyťukali adresu nebo se stránka přesunula jinam.</p>
   </div>
 </body>
 </html>
